--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ li.elementor-icon-list-item:before {
 <p>Für Beratungs- und Planungskosten werden € 150,-&nbsp; verrechnet –&gt; dieser Betrag wird bei Auftragserteilung von der Rechnung in Abzug gebracht.</p>
 
 <p>&nbsp;</p>
-<p><strong>Vertrauen Sie Österreichs 1. Adresse für Bad &amp; Heizung </strong><br>
+<p><strong>Vertrauen Sie Deutsches 1. Adresse für Bad &amp; Heizung </strong><br>
 Die 1a-Installateure sind eine Gruppe von rund 180 selbstständigen, innovativen Installationsbetrieben aus ganz Österreich.</p>
 <p><strong>Markenqualität, auf die Verlass ist </strong><br>
 Ein großer Vorteil beim 1a-Installateur ist, dass die Qualität hochwertiger Markenprodukte im Mittelpunkt steht. Dies macht sich für den Kunden vielfach bezahlt, durch Formschönheit und Langlebigkeit.</p>
