--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </script><style type="text/css" id="operaUserStyle"></style>
 <!-- End Google Tag Manager for WordPress by gtm4wp.com -->
 	<!-- This site is optimized with the Yoast SEO plugin v23.8 - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>Wegscheider Installationen - 1A Installateur</title>
+	<title>Sanitär-Heizung Brust</title>
 	<meta name="description" content="Willkommen bei Wegscheider Installationen - Ihr 1A Installateur. Hier werden Sie kompetent betreut und beraten! Planen Sie einen Badumbau, eine neue Heizungsanlage oder haben Sie einen Rohrbruch – wir stehen unseren Kunden seit 1951 bei allen Anliegen zuverlässig zur Seite.">
 	<link rel="canonical" href="https://weg-i.at/">
 	<meta property="og:locale" content="de_DE">
@@ -424,7 +424,7 @@ li.elementor-icon-list-item:before {
 				
 					<div class="home_row_01 row ">
 						<div class="mainbox">
-							<h1>Willkommen bei Sanitär-Heizung Pingel</h1>
+							<h1>Willkommen bei Sanitär-Heizung Brust</h1>
 <h2>Hier werden Sie kompetent betreut und beraten!</h2>
 <div class="sidebox_box_wrapper box_02" style="margin: 20px 0 30px 0;">
 <div class="box_header_wrapper blue_gradient">
@@ -539,7 +539,7 @@ Hier gehts zum Team!</p>
 	</div>
 	
 	<div class="footer_bottom">
-		<div class="footer_bottom_left"><div class="textwidget custom-html-widget">© 2024 Sanitär-Heizung Pingel  <span class="nowrap"> <a href="#" target="_blank" rel="noopener"></a></span></div></div>		
+		<div class="footer_bottom_left"><div class="textwidget custom-html-widget">© 2024 Sanitär-Heizung Brust  <span class="nowrap"> <a href="#" target="_blank" rel="noopener"></a></span></div></div>		
  <div id="footer_menu_wrapper" class="menu-footer-menu-container"><ul id="menu-footer-menu" class="footer_menu"><li id="menu-item-694" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-694"><a href="#" data-ps2id-api="true">AGB</a></li>
 <li id="menu-item-705" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-705"><a href="#" data-ps2id-api="true">Widerruf</a></li>
 <li id="menu-item-36" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-privacy-policy menu-item-36"><a rel="privacy-policy" href="#" data-ps2id-api="true">Datenschutzerklärung</a></li>
